--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lowdb": "^1.0.0",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.3",
+    "mongoose-slug-generator": "^1.0.4",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
