--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "lowdb": "^1.0.0",
+    "method-override": "^3.0.0",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.3",
     "mongoose-slug-generator": "^1.0.4",
